Fix layout issues with console; enable cursor.

--- a/css/console.less
+++ b/css/console.less
@@ -22,6 +22,9 @@
     right: 10px;
     display: inline;
 }
+#cloud_cmd_wrap {
+    padding: 0px;
+}
 #cloud_cmd .prompt {
     padding: 5px 0px 5px 5px;
 }
@@ -36,4 +39,13 @@
     position: absolute;
     width: 200px;
     z-index: 1000;
+}
+.cmd {
+    padding: 0px;
+}
+#cloud_cmd .cmd {
+    font-family: menlo,courier new,fixed,swiss,sans-serif;
+    color: #aaa;
+    background-color: #000;
+    font-size: 14px;
 }
