--- a/css/main.less
+++ b/css/main.less
@@ -409,124 +409,11 @@ img {
 #rightnav {
     height: 100%;
 }
-/* --- alerts --- */
-#purr-container {
-    position: fixed;
-    top: 5px;
-    right: 5px;
-}
-.message{
-        background-size: 40px 40px;
-        -webkit-background-size: 40px 40px;
-        -moz-background-size: 40px 40px;
-        background-size: 40px 40px;
-        background-image: -webkit-gradient(linear, left top, right bottom,
-                                color-stop(.25, rgba(255, 255, 255, .05)), color-stop(.25, transparent),
-                                color-stop(.5, transparent), color-stop(.5, rgba(255, 255, 255, .05)),
-                                color-stop(.75, rgba(255, 255, 255, .05)), color-stop(.75, transparent),
-                                to(transparent));
-        background-image: -webkit-linear-gradient(135deg, rgba(255, 255, 255, .05) 25%, transparent 25%,
-                            transparent 50%, rgba(255, 255, 255, .05) 50%, rgba(255, 255, 255, .05) 75%,
-                            transparent 75%, transparent);
-        background-image: -moz-linear-gradient(135deg, rgba(255, 255, 255, .05) 25%, transparent 25%,
-                            transparent 50%, rgba(255, 255, 255, .05) 50%, rgba(255, 255, 255, .05) 75%,
-                            transparent 75%, transparent);
-        background-image: -ms-linear-gradient(135deg, rgba(255, 255, 255, .05) 25%, transparent 25%,
-                            transparent 50%, rgba(255, 255, 255, .05) 50%, rgba(255, 255, 255, .05) 75%,
-                            transparent 75%, transparent);
-        background-image: -o-linear-gradient(135deg, rgba(255, 255, 255, .05) 25%, transparent 25%,
-                            transparent 50%, rgba(255, 255, 255, .05) 50%, rgba(255, 255, 255, .05) 75%,
-                            transparent 75%, transparent);
-        background-image: linear-gradient(135deg, rgba(255, 255, 255, .05) 25%, transparent 25%,
-                            transparent 50%, rgba(255, 255, 255, .05) 50%, rgba(255, 255, 255, .05) 75%,
-                            transparent 75%, transparent);
-         -moz-box-shadow: inset 0 -1px 0 rgba(255,255,255,.4);
-         -webkit-box-shadow: inset 0 -1px 0 rgba(255,255,255,.4);
-         box-shadow: inset 0 -1px 0 rgba(255,255,255,.4);
-         border-radius: 5px;
-         width: 350px;
-         border: 1px solid;
-         color: #fff;
-         padding: 15px;
-         text-shadow: 0 1px 0 rgba(0,0,0,.5);
-         animation: animate-bg 5s linear infinite;
-         -webkit-animation: animate-bg 5s linear infinite;
-         -moz-animation: animate-bg 5s linear infinite;
-}
 
-.info{
-         background-color: #4ea5cd;
-         border-color: #3b8eb5;
-}
+@import "notifications.less";
 
-.error{
-         background-color: #de4343;
-         border-color: #c43d3d;
-}
+@import "console.less";
 
-.warning{
-         background-color: #eaaf51;
-         border-color: #d99a36;
-}
-
-.success{
-         background-color: #61b832;
-         border-color: #55a12c;
-}
-
-.message h3{
-         margin: 0 0 5px 0;
-}
-
-.message p{
-         margin: 0;
-}
-
-@keyframes animate-bg {
-    from {
-        background-position: 0 0;
-    }
-    to {
-       background-position: -80px 0;
-    }
-}
-/* --- cloud console --- */
-#console_area {
-    border-top: 5px solid gray;
-    background-color: #000;
-    position: fixed;
-    bottom: 0px;
-    width: 99%;
-    min-height: 35px;
-    z-index: 100;
-}
-#command_area {
-    position: relative;
-    bottom: 0px;
-    width: 90%;
-}
-#console_controls {
-    font-size: 11px;
-    position: absolute;
-    top: 0px;
-    right: 0px;
-    display: inline;
-}
-#cloud_cmd .prompt {
-    padding: 5px 0px 5px 5px;
-}
-#cloud_cmd {
-    padding: 11px 0px 11px 5px;
-}
-#console_controls {
-    padding: 4px 0px;
-    background-color: #000;
-}
-#con_menu {
-    position: absolute;
-    width: 200px;
-    z-index: 101;
-}
 #tabs_design {
     height: 300px;
     width: 100%;
@@ -540,7 +427,7 @@ img {
 #design_editor {
     height: 100%;
     width: 90%;
-}   
+}
 
 /* ==========================================================================
    Helper classes
